Fixing text overflow
Former-commit-id: 3d3208ec06bdf0370db76cfda005d374cc4db22e

--- a/static/style.css
+++ b/static/style.css
@@ -254,6 +254,7 @@ main {
     overflow-y: scroll;
     z-index: 20;
     height: 100%;
+    overflow-wrap: anywhere;
 }
 
 #chat > div {
